<resources>
    <string name="app_name">Elokira</string>
    <string name="id_number">ID Number</string>
    <string name="validate">Validate</string>
    <string name="first_Name">First Name</string>
    <string name="elokira">Elokira</string>
    <string name="phone_number">Phone Number</string>
    <string name="get_code">Get code</string>
    <string name="sign_me_up">Sign me up</string>
    <string name="get_me_in">Get me in</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">sign Up</string>
    <string name="enter_phone_no">Enter your phone number(+254xxxxxxxxx)</string>
    <string name="code">Enter the code sent to your number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="preference_file_key">com.example.elokira.PREFERENCE_FILE_KEY</string>
    <string name="ID_number_not_found">ID number not found: Sign in</string>
    <string name="Vote">vote</string>
    <string name="elections">Elections</string>
</resources>