<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUpLogInFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/linear_layout_margin"
        android:layout_marginEnd="@dimen/linear_layout_margin">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:src="@drawable/elokira_android" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpbutton"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/button_top_margin"
            android:layout_weight="0"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:background="@drawable/rounded_sign_in_button"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/have_an_account"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="normal"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logInButton"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:background="@drawable/rounded_sign_in_button"
            style="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/white"/>
    </LinearLayout>




</layout>