<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ValidateSignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/linear_layout_margin"
        android:layout_marginEnd="@dimen/linear_layout_margin"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/elokira_logo" />

        <TextView
            android:id="@+id/names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/full_names"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/valid_id_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="37366004"
            style="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/enter_phone_no"
            style="@style/TextAppearance.AppCompat.Small"
            android:textStyle="normal"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNoErr"
            android:layout_marginBottom="@dimen/bottom_edit_text_margin">
            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/phone_number"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/validateSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:background="@drawable/rounded_sign_in_button"
            android:layout_marginTop="@dimen/button_top_margin"
            android:text="@string/sign_me_up"
            android:textAllCaps="false"
            />


    </LinearLayout>
</layout>